--- a/index.html
+++ b/index.html
@@ -34,10 +34,8 @@
             <img src="images/undraw_videographer.svg" alt="Videographer">
         </div>
         <div class="content">
-            <h1>A curious mind seeking to blend the creative arts with <span>Computer Engineering</span></h1>
-            <h3>Hey! My name is Jose Florencio Panem, a.k.a. Enzo &#128075; I'm a <span>Computer Engineer</span> based in Toronto, Canada</h3>
-            <p>Whether it’s building apps, producing music, or filmmaking-this shows how being versatile and open to new ideas can lead to amazing results. 
-                Innovators thrive when they can adapt to different tools and challenges, using creativity to solve problems and build something meaningful.</p>
+            <h1>Hi, I'm <span>Enzo Panem</span></h1>
+            <h3>I'm a <span>Computer Engineer</span> aiming to push creative boundaries and to innovate across every aspect of my craft</h3>
             <a href="/assets/resume.pdf" target="_blank" rel="noopener noreferrer">
                 <div class="btn"><button>View Résumé</button></div>
             </a>
@@ -54,21 +52,19 @@
         </div>
         <div class="about-me-container">
             <div class="about-me-left">
-                <img src="images/enzo2.jpg" alt="">
+                <img src="images/enzojapan_clear.png" alt="My Face">
             </div>
             <div class="about-me-right">
                 <h2>Enzo Panem <span>| Computer Engineer, Musician, Filmmaker, Athlete</span></h2>
                 <div class="content">
-                    <p>Hey there! Welcome to my portfolio website. I'm Enzo Panem, a computer engineer based out of Toronto. 
-                        From producing my own short films to writing blocks of code on an IDE, I aim to combine the world of creative design with
-                        the world of logic.
-                        You want to shake things up together? Let's connect and have a chat!
+                    <p> Born in Manila, Philippines.  From producing my own short films, creating my own music, to writing blocks of code on an IDE, I aim to combine the world of creative design with
+                        the world of logic. Let's connect and have a chat!
                     </p>
                     <div class="links">
                         <!-- Opens new tab: 'target' and 'rel' attribute -->
                         <a href="https://www.linkedin.com/in/enzo-panem/" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-161-svgrepo-com.svg" class="about-me-logo"></a>
                         <a href="https://github.com/panem-enzo" target="_blank" rel="noopener noreferrer"><img src="images/github-142-svgrepo-com.svg" class="about-me-logo"></a>
-                        <a href="https://leetcode.com/u/EnzoPanem/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="about-me-logo"></a>
+                        <a href="https://leetcode.com/u/Chewyan/" target="_blank" rel="noopener noreferrer"><img src="images/leetcode-svgrepo-com.svg" class="about-me-logo"></a>
                         <a href="https://www.youtube.com/@ZoMags" target="_blank" rel="noopener noreferrer"><img src="images/youtube-filled-svgrepo-com.svg" class="about-me-logo"></a>
                     </div>
                 </div>
@@ -111,9 +107,14 @@
                 <div class="card-right">
                     <h3>Software Developer Intern, AI Automation Team • Capco</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
-                        aliquet sed, commodo sit amet sapien.
+                        I led the development of innovative tools and systems to enhance efficiency and reliability, 
+                        including an AI-integrated extension that improved developer workflows and a secure, scalable 
+                        API with advanced authentication. By conducting iterative testing and optimizing solutions, I 
+                        reduced errors and improved overall performance. Leveraging agile practices, I collaborated 
+                        with cross-functional teams, conducted thorough code reviews, and enhanced test coverage to 
+                        deliver high-quality results. To support team growth and stakeholder engagement, I streamlined 
+                        onboarding processes with clear documentation and presented progress updates, gathering feedback 
+                        to drive continuous improvements and align solutions with user needs.
                     </p>
                     <div class="experience-skills">
                         <div class="skill">
@@ -159,9 +160,11 @@
                 <div class="card-right">
                     <h3>Re-Engineering and Programming Lead • York Engineering Competition (YEC)</h3>
                     <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
-                        Fusce aliquet vel ante ac cursus. Proin quam elit, consectetur nec 
-                        aliquet sed, commodo sit amet sapien.
+                        I created engaging challenges that encouraged innovation and the application of 
+                        diverse skills. I mentored participants on strategy, leading to improved satisfaction
+                         compared to previous events. I managed logistics, developed clear guidelines for large 
+                         groups, and coordinated communication between various stakeholders, ensuring smooth event 
+                         operations and efficient problem resolution.
                     </p>
                     <div class="experience-skills">
                         <div class="skill">
@@ -253,5 +256,6 @@
     </footer>
 
     <script src="script.js"></script>
+      
 </body>
 </html>
